# file_prompt

./: README.md  cli.py  path_collector.py  path_collector_test.py  pyproject.toml
prompts/: assistant.txt  original.txt
src/file_prompt/: click_app.py  collector.py  collector_test.py  file_utils.py
src/file_prompt/plugin/: __init__.py  base.py  file.py  file_test.py
